Agrego fechas a las tareas manipuladas con la librería moment.js y agrego la librería uuid para la generación de ids de los elementos

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,8 @@ form {
   padding: 10px;
   border: 1px solid var(--green);
   outline: none;
-  width: 65%;
+  width: 75%;
+  margin-bottom: .5rem;
 }
 
 .inputForm::placeholder {
@@ -138,6 +139,11 @@ form {
 
 .noTasks {
   font-size: 48px;
+}
+
+.date{
+  width: 100%;
+  padding: 15px;
 }
 
 .pie{
